--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <body>
 	<iframe name="iframe1">IFrame1</iframe>
 	<iframe name="iframe2">IFrame2</iframe>
-	<iframe name="iframe3">IFrame3</iframe>
+	<iframe name="iframe3" src="scrat.html">IFrame3</iframe>
 	<iframe name="iframe4">IFrame4</iframe>	
 </body>
 </html>
