4: Iframe mit Bill Murray
Task-Url: https://github.com/ppedvAG/git_kurs_KA_31072019_gitflow/issues/4

--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 	<iframe name="iframe1">IFrame1</iframe>
 	<iframe name="iframe2">IFrame2</iframe>
 	<iframe name="iframe3">IFrame3</iframe>
-	<iframe name="iframe4">IFrame4</iframe>	
+	<iframe name="iframe4" src="Bill.html">IFrame4</iframe>	
 </body>
 </html>
