--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-	<iframe name="iframe1">IFrame1</iframe>
+	<iframe name="iframe1" src="katzen.html">IFrame1</iframe>
 	<iframe name="iframe2">IFrame2</iframe>
 	<iframe name="iframe3">IFrame3</iframe>
 	<iframe name="iframe4" src="Bill.html">IFrame4</iframe>	
