--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
 	<iframe name="iframe1" src="katzen.html">IFrame1</iframe>
 	<iframe name="iframe2">IFrame2</iframe>
 	<iframe name="iframe3" src="scrat.html">IFrame3</iframe>
-	<iframe name="iframe4" src="Bill.html">IFrame4</iframe>	
+	<iframe name="iframe4" src="Bill.html">IFrame4</iframe>
+	
+	
+	<h2>Einkaufen:</h2>
+	<ul>
+		<li>Bier</li>
+		<li>Windeln</li>
+		<li>Grillgut</li>
+	</ul>
 </body>
 </html>
