--- a/index.html
+++ b/index.html
@@ -4,5 +4,12 @@
 	<iframe name="iframe2">IFrame2</iframe>
 	<iframe name="iframe3" src="scrat.html">IFrame3</iframe>
 	<iframe name="iframe4" src="Bill.html">IFrame4</iframe>	
+		
+	<h2>Einkaufen:</h2>
+	<ul>
+		<li>Bier</li>
+		<li>Windeln</li>
+
+	</ul>
 </body>
 </html>
